Added GUI for A7